--- a/RNExample/android/app/build.gradle
+++ b/RNExample/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'kotlin-android'
 
 import com.android.build.OutputFile
 
@@ -140,7 +141,8 @@ dependencies {
     compile project(':react-native-synchronous-list')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.facebook.react:react-native:+"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.51"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
@@ -148,4 +150,7 @@ dependencies {
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
+}
+repositories {
+    mavenCentral()
 }
