--- a/package.json
+++ b/package.json
@@ -38,13 +38,7 @@
     "babel-eslint": "^6.1.2",
     "babel-plugin-module-resolver": "^2.3.0",
     "babel-preset-airbnb": "^1.1.1",
-    "babel-preset-react-native": "3.0.2",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.1.2"
+    "babel-preset-react-native": "3.0.2"
   },
   "jest": {
     "preset": "react-native"
